--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^0.12.12",
+    "ethers": "^5.0.0",
+    "fs": "^0.0.1-security",
     "next": "^12.1.6",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "sweetalert2": "^11.7.3",
+    "wagmi": "^0.12.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.15.0",
+    "dotenv": "^16.0.3",
     "eslint-config-next": "^12.1.6",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.9.4"
